welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: ')' expected but integer literal found.
  if ((aSmile && bSmile) || (!aSmile 11 !bSmile)){
                                     ^monkeyTrouble:7: error: ')' expected but '}' found.
} 
^